Fix: Line wrapping with long string

--- a/packages/components/src/styles/components/code-block/index.scss
+++ b/packages/components/src/styles/components/code-block/index.scss
@@ -55,6 +55,7 @@ $hds-code-block-code-footer-height: 48px;
 .hds-code-block--has-line-wrapping {
   .hds-code-block__code,
   .hds-code-block__code code {
+    display: block;
     white-space: pre-wrap;
     overflow-wrap: break-word;
   }
